--- a/app/templates/admin/adminManageInvigilationReport.html
+++ b/app/templates/admin/adminManageInvigilationReport.html
@@ -3,7 +3,7 @@
 {% block title %}Admin ManageInvigilationReport{% endblock %}
 {% block head_title %}<h2>Manage Invigilation Report</h2>{% endblock %}
 
-{% block announce_section %}
+{% block show_announce_section %}
 <!-- Announce Form -->
 <form id="announceForm" action="{{ url_for('admin_manageInvigilationReport') }}" method="POST" enctype="multipart/form-data">
     <div id="announceSection" class="function-frame">
