--- a/app/templates/admin/adminManageInvigilationTimetable.html
+++ b/app/templates/admin/adminManageInvigilationTimetable.html
@@ -3,7 +3,7 @@
 {% block title %}Admin ManageInvigilationTimetable{% endblock %}
 {% block head_title %}<h2>Manage Invigilation Timetable</h2>{% endblock %}
 
-{% block announce_section %}
+{% block show_announce_section %}
 <!-- Announce Form -->
 <form id="announceForm" action="{{ url_for('admin_manageInvigilationTimetable') }}" method="POST" enctype="multipart/form-data">
     <div id="announceSection" class="function-frame">
