--- a/app/templates/admin/adminBase.html
+++ b/app/templates/admin/adminBase.html
@@ -120,7 +120,8 @@
                     {% block manual_section %}{% endblock %}
                 {% endif %}
             <br>    
-
+            {% endif %}
+            
             <!-- Main Page-Specific Content -->
             {% block content %}{% endblock %}
         </main>
