--- a/app/templates/admin/adminManageTimetable.html
+++ b/app/templates/admin/adminManageTimetable.html
@@ -3,7 +3,7 @@
 {% block title %}Admin ManageTimetable{% endblock %}
 {% block head_title %}<h2>Manage Timetable</h2>{% endblock %}
 
-{% block show_announce_section %}
+{% block announce_section %}
 <!-- Announce Form -->
 <form id="announceForm" action="{{ url_for('admin_manageTimetable') }}" method="POST" enctype="multipart/form-data">
     <div id="announceSection" class="function-frame">
@@ -14,7 +14,7 @@
 </form>
 {% endblock %}
 
-{% block show_upload_section %}
+{% block upload_section %}
 <form>
     {% if not files %}
         {% if not authorized %}
