--- a/app/templates/admin/adminManageInvigilationReport.html
+++ b/app/templates/admin/adminManageInvigilationReport.html
@@ -1,5 +1,8 @@
 {% extends "admin/adminBase.html" %}
 {% set show_tabs = true %}
+{% set show_upload = false %}
+{% set show_announce = true %}
+{% set show_manual = false %}
 {% block title %}Admin ManageInvigilationReport{% endblock %}
 {% block head_title %}<h2>Manage Invigilation Report</h2>{% endblock %}
 
