--- a/app/templates/admin/adminManageStaff.html
+++ b/app/templates/admin/adminManageStaff.html
@@ -1,5 +1,8 @@
 {% extends "admin/adminBase.html" %}
 {% set show_tabs = true %}
+{% set show_upload = true %}
+{% set show_announce = true %}
+{% set show_manual = true %}
 {% block title %}Admin ManageStaff{% endblock %}
 {% block head_title %}<h2>Manage Staff</h2>{% endblock %}
 
