--- a/app/templates/admin/adminManageVenue.html
+++ b/app/templates/admin/adminManageVenue.html
@@ -1,5 +1,8 @@
 {% extends "admin/adminBase.html" %}
 {% set show_tabs = true %}
+{% set show_upload = false %}
+{% set show_announce = true %}
+{% set show_manual = true %}
 {% block title %}Admin ManageVenue{% endblock %}
 {% block head_title %}<h2>Manage Venue</h2>{% endblock %}
 
