--- a/app/templates/admin/adminManageTimetable.html
+++ b/app/templates/admin/adminManageTimetable.html
@@ -2,7 +2,7 @@
 {% set show_tabs = true %}
 {% set show_upload = true %}
 {% set show_announce = true %}
-{% set show_manual = true %}
+{% set show_manual = false %}
 {% block title %}Admin ManageTimetable{% endblock %}
 {% block head_title %}<h2>Manage Timetable</h2>{% endblock %}
 
