--- a/app/templates/admin/adminManageTimetable.html
+++ b/app/templates/admin/adminManageTimetable.html
@@ -13,12 +13,12 @@
         <input type="hidden" name="form_type" value="announce">
         <div class="form-left" style="width: 100%">
         </div>
-    </div>
+    </div>  
 </form>
 {% endblock %}
 
 {% block upload_section %}
-<form>
+<form id="uploadForm" action="{{ url_for('admin_manageTimetable') }}" method="POST" enctype="multipart/form-data">
     {% if not files %}
         {% if not authorized %}
             <a href="{{ url_for('authorize') }}" class="btn btn-primary">Click here to authorize Google Drive</a>
