--- a/app/templates/admin/adminManageInvigilationReport.html
+++ b/app/templates/admin/adminManageInvigilationReport.html
@@ -8,7 +8,7 @@
 
 {% block announce_section %}
 <!-- Announce Form -->
-<form id="announceForm" action="{{ url_for('admin_manageInvigilationReport') }}" method="POST" enctype="multipart/form-data">
+<form id="announceForm" action="{{ url_for('admin_manageInvigilationReport') }}" method="POST">
     <div id="announceSection" class="function-frame">
         <input type="hidden" name="form_type" value="announce">
         <div class="form-left" style="width: 100%">
