--- a/app/templates/admin/adminManageVenue.html
+++ b/app/templates/admin/adminManageVenue.html
@@ -8,7 +8,7 @@
 
 {% block announce_section %}
 <!-- Announce Form -->
-<form id="announceForm" action="{{ url_for('admin_manageVenue') }}" method="POST" enctype="multipart/form-data">
+<form id="announceForm" action="{{ url_for('admin_manageVenue') }}" method="POST">
     <div id="announceSection" class="function-frame">
         <input type="hidden" name="form_type" value="announce">
         <div class="form-left" style="width: 100%">
@@ -19,7 +19,7 @@
 
 {% block manual_section %}
 <!-- Manual Form -->
-<form id="manualForm" action="{{ url_for('admin_manageVenue') }}" method="POST" style="display: none;">
+<form id="manualForm" action="{{ url_for('admin_manageVenue') }}" method="POST" enctype="multipart/form-data">
     <div id="manualSection" class="function-frame" style="width:100%">
         <h4 style="text-align: center;">Manual Data Entry Section</h4>
         <div class="profile-frame">
