--- a/app/templates/admin/adminManageInvigilationTimetable.html
+++ b/app/templates/admin/adminManageInvigilationTimetable.html
@@ -1,16 +1,16 @@
 {% extends "admin/adminBase.html" %}
 {% set show_tabs = true %}
 {% set show_upload = false %}
-{% set show_announce = true %}
+{% set show_dashboard = true %}
 {% set show_manual = false %}
 {% block title %}Admin ManageInvigilationTimetable{% endblock %}
 {% block head_title %}<h2>Manage Invigilation Timetable</h2>{% endblock %}
 
-{% block announce_section %}
-<!-- Announce Form -->
-<form id="announceForm" action="{{ url_for('admin_manageInvigilationTimetable') }}" method="POST">
-    <div id="announceSection" class="function-frame">
-        <input type="hidden" name="form_type" value="announce">
+{% block dashboard_section %}
+<!-- Dashboard Form -->
+<form id="dashboardForm" action="{{ url_for('admin_manageInvigilationTimetable') }}" method="POST">
+    <div id="dashboardSection" class="function-frame">
+        <input type="hidden" name="form_type" value="dashboard">
         <div class="form-left" style="width: 100%">
         </div>
     </div>
@@ -52,9 +52,9 @@
 
                             <!-- Exam Details -->
                             <td rowspan="{{ rowspan }}">
-                                Exam Date   : [{{ att.report.exam.examStartTime.strftime("%Y-%m-%d") }}] - [{{ att.report.exam.examEndTime.strftime("%Y-%m-%d") }}] <br>      
-                                Exam Day    : [{{ att.report.exam.examStartTime.strftime("%A") }}] - [{{ att.report.exam.examEndTime.strftime("%A") }}] <br>
-                                Exam Time   : [{{ att.report.exam.examStartTime.strftime("%H:%M") }}] - [{{ att.report.exam.examEndTime.strftime("%H:%M") }}] <br>
+                                Exam Date   : [{{ att.report.exam.examStartTime.strftime("%Y-%m-%d") }} - {{ att.report.exam.examEndTime.strftime("%Y-%m-%d") }}] <br>      
+                                Exam Day    : [{{ att.report.exam.examStartTime.strftime("%A") }} - {{ att.report.exam.examEndTime.strftime("%A") }}] <br>
+                                Exam Time   : [{{ att.report.exam.examStartTime.strftime("%H:%M") }} - {{ att.report.exam.examEndTime.strftime("%H:%M") }}] <br>
                                 Exam Period : [{{ (att.report.exam.examEndTime - att.report.exam.examStartTime).seconds // 3600 }}h 
                                               {{ ((att.report.exam.examEndTime - att.report.exam.examStartTime).seconds % 60) // 3600 }}m]<br>
                                 Exam Venue  : [{{ att.report.exam.examVenue }}]
