--- a/app/templates/admin/adminBase.html
+++ b/app/templates/admin/adminBase.html
@@ -76,7 +76,7 @@
                     <div class="second-nav">
                         {% if show_dashboard %}
                             <a href="#dashboard" class="tab-link active" data-section="dashboardSection">
-                                <i class="fas fa-envelope"></i>
+                                <i class="fas fa-chart-line"></i>
                                 <span>Dashboard</span>
                             </a>
                         {% endif %}
