--- a/app/templates/admin/adminManageTimetable.html
+++ b/app/templates/admin/adminManageTimetable.html
@@ -22,15 +22,11 @@
     {% if not files %}
         {% if not authorized %}
             <div class="button-wrapper">
-                <button type="submit">
-                    <a href="{{ url_for('authorize') }}" class="btn btn-primary">Click here to authorize Google Drive</a>
-                </button>
+                <a href="{{ url_for('authorize') }}" class="btn btn-primary">Click here to authorize Google Drive</a>
             </div>
         {% else %}
             <div class="button-wrapper">
-                <button type="submit">
-                    <a href="{{ url_for('fetch_drive_files') }}" class="btn btn-success">Click here to load files from Google Drive</a>
-                </button>
+                <a href="{{ url_for('fetch_drive_files') }}" class="btn btn-success">Click here to load files from Google Drive</a>
             </div>
         {% endif %}
     {% endif %}
@@ -38,16 +34,14 @@
     {% if files %}
         <!-- Refresh Button -->
         <div class="button-wrapper">
-            <button type="submit">
-                <a href="{{ url_for('fetch_drive_files') }}" class="btn btn-warning">Click here to refresh the files from Google Drive</a>
-            </button>
+            <a href="{{ url_for('fetch_drive_files') }}" class="btn btn-warning">Click here to refresh the files from Google Drive</a>
         </div>
         <br><br>
 
         <h3>PDF Files from SOC Folder:</h3>
-        <button type="submit">
+        <div class="button-wrapper">
             <a href="{{ url_for('extract_all') }}" class="btn btn-danger">Extract & Save All Timetables to Database</a>
-        </button>
+        </div>
         <br><br><br>
 
         <div class="menu-grid" style="grid-template-columns: repeat(4, 1fr);">
