--- a/app/static/css/admin.css
+++ b/app/static/css/admin.css
@@ -492,7 +492,7 @@ input, select{
     font-size: 1.1rem;
     border: none;
     border-radius: 6px;
-    background-color: #27A2DB;
+    background-color: #84B4F0;
     color: white;
     cursor: pointer;
     transition: background-color 0.3s ease;
