--- a/app/templates/admin/adminManageTimetable.html
+++ b/app/templates/admin/adminManageTimetable.html
@@ -21,28 +21,20 @@
 <form id="uploadForm" action="{{ url_for('admin_manageTimetable') }}" method="POST" enctype="multipart/form-data">
     {% if not files %}
         {% if not authorized %}
-            <div class="button-wrapper">
-                <button><a href="{{ url_for('authorize') }}" class="btn btn-primary">Click here to authorize Google Drive</a></button>
-            </div>
+            <a href="{{ url_for('authorize') }}" class="button-wrapper">Click here to authorize Google Drive</a>
         {% else %}
-            <div class="button-wrapper">
-                <button><a href="{{ url_for('fetch_drive_files') }}" class="btn btn-success">Click here to load files from Google Drive</a></button>
-            </div>
+            <a href="{{ url_for('fetch_drive_files') }}" class="button-wrapper"><i class="fas fa-sync-alt"></i> Refresh</a>
         {% endif %}
     {% endif %}
 
     {% if files %}
         <!-- Refresh Button -->
-        <div class="button-wrapper">
-            <button><a href="{{ url_for('fetch_drive_files') }}" class="btn btn-warning">Click here to refresh the files from Google Drive</a></button>
-        </div>
+        <a href="{{ url_for('fetch_drive_files') }}" class="button-wrapper"><i class="fas fa-sync-alt"></i> Refresh</a>
+        <a href="{{ url_for('extract_all') }}" class="button-wrapper">Extract & Save All Timetables to Database</a>
         <br><br>
 
         <h3>PDF Files from SOC Folder:</h3>
-        <div class="button-wrapper">
-            <button><a href="{{ url_for('extract_all') }}" class="btn btn-danger">Extract & Save All Timetables to Database</a></button>
-        </div>
-        <br><br><br>
+        <br><br>
 
         <div class="menu-grid" style="grid-template-columns: repeat(4, 1fr);">
             {% for file in files %}
