--- a/app/templates/admin/adminManageTimetable.html
+++ b/app/templates/admin/adminManageTimetable.html
@@ -23,19 +23,25 @@
         {% if not authorized %}
             <a href="{{ url_for('authorize') }}" class="button-wrapper">Click here to authorize Google Drive</a>
         {% else %}
+            <div class="button-wrapper">
+                <form action="{{ url_for('fetch_drive_files') }}" method="get">
+                    <button type="submit" class="btn-refresh">
+                        <i class="fas fa-sync-alt"></i> Refresh
+                    </button>
+                </form>
+            </div>
+
             <a href="{{ url_for('fetch_drive_files') }}" class="button-wrapper"><i class="fas fa-sync-alt"></i> Refresh</a>
         {% endif %}
     {% endif %}
 
     {% if files %}
         <!-- Refresh Button -->
-        <a href="{{ url_for('fetch_drive_files') }}" class="button-wrapper"><i class="fas fa-sync-alt"></i> Refresh</a>
+        <a href="{{ url_for('fetch_drive_files') }}" class="button-wrapper"><i class="fas fa-sync-alt"></i>Refresh</a>
         <a href="{{ url_for('extract_all') }}" class="button-wrapper">Extract & Save All Timetables to Database</a>
         <br><br>
 
         <h3>PDF Files from SOC Folder:</h3>
-        <br><br>
-
         <div class="menu-grid" style="grid-template-columns: repeat(4, 1fr);">
             {% for file in files %}
                 <div>
@@ -46,7 +52,7 @@
                 </div>
             {% endfor %}
         </div>
-        <br><br><br>
+        <br><br>
 
         <div id="previewArea" style="max-height: 400px; overflow-y: auto; border:1px solid #ccc; padding:1%;">
             <h4>Preview Result</h4>
