--- a/app/static/css/admin.css
+++ b/app/static/css/admin.css
@@ -487,7 +487,8 @@ input, select{
     justify-content: center; /* Horizontally centers the button */
 }
 
-.button-wrapper button, a {
+.button-wrapper button, 
+.button-wrapper a {
     padding: 12px 24px;
     font-size: 1.1rem;
     border: none;
