--- a/app/templates/admin/adminManageTimetable.html
+++ b/app/templates/admin/adminManageTimetable.html
@@ -29,7 +29,8 @@
 
     {% if files %}
         <!-- Refresh Button -->
-        <a href="{{ url_for('fetch_drive_files') }}"><i class="fas fa-sync-alt"></i>Refresh</a>
+        <a href="{{ url_for('fetch_drive_files') }}"><i class="fas fa-sync-alt" style="margin-right: 10px;"></i>Refresh</a>
+        <br>
         <a href="{{ url_for('extract_all') }}">Extract & Save All Timetables to Database</a>
 
         <h3>PDF Files from SOC Folder:</h3>
