--- a/app/static/css/admin.css
+++ b/app/static/css/admin.css
@@ -498,6 +498,7 @@ input, select{
     cursor: pointer;
     transition: background-color 0.3s ease;
     width: 25%;
+    text-align: center;
 }
 
 
